在 cpp 中添加detail blending的 function

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ max/
 playground/playground1/.vs/
 playground/playground1/Debug/
 playground/playground1/playground1/Debug/
+playground/playground1/playground1/x64/
+playground/playground1/x64/Debug/
 Packt.HLSL Development Cookbook.2013.pdf
