为detail map 添加 static switch

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ fxProject/textures/
 fxProject/videos/
 fxProject/Document1.dae
 fxProject/HLSLTest.fxcproj
+Packt.HLSL Development Cookbook_example/
 max/
 playground/playground1/.vs/
 playground/playground1/Debug/
