提交家里的git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ playground/playground1/playground1/x64/
 playground/playground1/x64/Debug/
 Packt.HLSL Development Cookbook.2013.pdf
 texture/*.*
+texture/pbrT/*.*
