--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ playground/playground1/x64/Debug/
 Packt.HLSL Development Cookbook.2013.pdf
 texture/*.*
 texture/pbrT/*.*
+builtin_shaders-2018.2.6f1/
